--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,17 +1,3 @@
-.img{
-    background: url('../resources/gradient.png')no-repeat;
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-  }
-  .img::before{
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-  }
   .center{
     position: absolute;
     top: 52%;
@@ -27,7 +13,7 @@
     font-weight: 600;
   }
   .center .subtitle{
-    color: var(--white);
+    color: var(--darkblue);
     font-size: 40px;
     font-weight: 600;
   }
