--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -18,7 +18,7 @@ nav .menu{
 }
 .menu .logo a{
     text-decoration: none;
-    color: var(--white);
+    color: var(--darkblue);
     font-size: 35px;
     font-weight: 600;
 }
@@ -34,7 +34,7 @@ nav .menu{
 }
 .menu ul li a{
     text-decoration: none;
-    color: var(--white);
+    color: var(--darkblue);
     font-size: 18px;
     font-weight: 500;
     padding: 8px 15px;
@@ -44,8 +44,8 @@ nav .menu{
     transition: all 0.5s ease;
 }
 .menu ul li a:hover{
-    border-color: var(--white);
+    border-color: var(--darkblue);
 }
 .menu ul li a.active {
-    border-color: var(--white);
+    border-color: var(--darkblue);
 }
