--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,4 +1,4 @@
-  .center{
+.center{
     position: absolute;
     top: 52%;
     left: 50%;
@@ -8,12 +8,12 @@
     text-align: center;
   }
   .center .title{
-    color: var(--white);
+    color: var(--yellow);
     font-size: 70px;
     font-weight: 600;
   }
   .center .subtitle{
-    color: var(--darkblue);
+    color: var(--white);
     font-size: 40px;
     font-weight: 600;
   }
@@ -26,27 +26,27 @@
     border-radius: 30px;
     border: none;
     margin: 0 10px;
-    border: 2px solid var(--white);
+    border: 2px solid var(--yellow);
     font-size: 20px;
     font-weight: 500;
     padding: 0 10px;
     cursor: pointer;
     outline: none;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
   }
   .center .btns .left-button{
-    background: var(--white);
-    color: var(--darkblue);
+    background: var(--yellow);
+    color: var(--black);
   }
   .center .btns .left-button:hover{
-    color: var(--white);
+    color: var(--yellow);
     background: none;
   }
   .center .btns .right-button{
-    color: var(--white);
+    color: var(--yellow);
     background: none;
   }
   .btns .right-button:hover{
-    background: var(--white);
-    color: var(--darkblue);
+    color: var(--black);
+    background: var(--yellow);
   }
