--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,3 @@
-::selection{
-    color: var(--lightblue);
-    background: var(--white);
-}
 nav{
     position: fixed;
     width: 100%;
@@ -18,8 +14,8 @@ nav .menu{
 }
 .menu .logo a{
     text-decoration: none;
-    color: var(--darkblue);
-    font-size: 35px;
+    color: var(--yellow);
+    font-size: 42px;
     font-weight: 600;
 }
 .menu ul{
@@ -34,8 +30,8 @@ nav .menu{
 }
 .menu ul li a{
     text-decoration: none;
-    color: var(--darkblue);
-    font-size: 18px;
+    color: var(--yellow);
+    font-size: 20px;
     font-weight: 500;
     padding: 8px 15px;
     border-radius: 30px;
@@ -44,8 +40,8 @@ nav .menu{
     transition: all 0.5s ease;
 }
 .menu ul li a:hover{
-    border-color: var(--darkblue);
+    border-color: var(--yellow);
 }
 .menu ul li a.active {
-    border-color: var(--darkblue);
+    border-color: var(--yellow);
 }
