--- a/src/styles/CreatePoolForm.css
+++ b/src/styles/CreatePoolForm.css
@@ -1,12 +1,15 @@
 .form-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    background-color: var(--white);
-    border-radius: 30px;
-  }
-  
-  .form-container h2 {
+  max-width: 600px;
+  width: 100%;
+  padding: 20px;
+  background-color: var(--white);
+  border-radius: 30px;
+  position: relative;
+  top: 150px;
+  margin: auto;
+  margin-bottom: 200px;
+}  
+.form-container h2 {
     font-size: 22px;
     font-weight: 500;
     color: var(--black);
@@ -17,24 +20,18 @@
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 2px solid var(--darkblue);
+    border: 2px solid var(--black);
     border-radius: 10px;
     font-size: 14px;
-    background-color: var(--superlightblue);
-  }
-
-  .form-input:{
-    border-color: var(--darkblue);
-    background-color: var(--superlightblue);
-  }
-
-  .form-input:focus {
-    border-color: var(--darkblue);
-    background-color: var(--superlightblue);
   }
 
   #poolDescription {
-    max-height: 120px;
+    min-height: 50px;
+    max-width: 100%;
+  }
+
+  #approvedAddresses {
+    min-height: 50px;
     max-width: 100%;
   }
   
@@ -59,32 +56,16 @@
   .form-select {
     width: 100%;
     padding: 10px;
-    border: 2px solid var(--darkblue);
+    border: 2px solid var(--black);
     border-radius: 10px;
     font-size: 14px;
-    background-color: var(--superlightblue);
   }
   
   .form-price {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
     color: var(--black);
     margin-top: 20px;
     border-top: 2px solid var(--gray);
     padding-top: 10px;
   }
-  .form-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .form-container {
-    max-width: 600px;
-    width: 100%;
-    padding: 20px;
-    background-color: var(--white);
-    border-radius: 30px;
-    position: relative;
-  }  
