--- a/src/styles/CreatePoolForm.css
+++ b/src/styles/CreatePoolForm.css
@@ -65,7 +65,70 @@
     font-size: 16px;
     font-weight: 500;
     color: var(--black);
-    margin-top: 20px;
-    border-top: 2px solid var(--gray);
-    padding-top: 10px;
+    margin-top: 30px;
+    border-top: 1px solid var(--gray);
+    padding-top: 20px;
   }
+
+  .form-toggle {
+    display: flex;
+    align-items: center;
+  }
+  
+  .form-toggle .switch {
+    --button-width: 30px;
+    --button-height: 16px;
+    --toggle-diameter: 10px;
+    --button-toggle-offset: calc((var(--button-height) - var(--toggle-diameter)) / 2);
+    --toggle-shadow-offset: 10px;
+    --toggle-wider: 10px;
+    --color-grey: var(--gray);
+    --color-green: var(--black);
+    margin-left: 10px;
+  }
+  
+  .form-toggle .slider {
+    display: inline-block;
+    width: var(--button-width);
+    height: var(--button-height);
+    background-color: var(--color-grey);
+    border-radius: calc(var(--button-height) / 2);
+    position: relative;
+    transition: 0.3s all ease-in-out;
+  }
+  
+  .form-toggle .slider::after {
+    content: "";
+    display: inline-block;
+    width: var(--toggle-diameter);
+    height: var(--toggle-diameter);
+    background-color: var(--white);
+    border-radius: calc(var(--toggle-diameter) / 2);
+    position: absolute;
+    top: var(--button-toggle-offset);
+    transform: translateX(var(--button-toggle-offset));
+    box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+    transition: 0.3s all ease-in-out;
+  }
+  
+  .form-toggle .switch input[type="checkbox"]:checked + .slider {
+    background-color: var(--color-green);
+  }
+  
+  .form-toggle .switch input[type="checkbox"]:checked + .slider::after {
+    transform: translateX(calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)));
+    box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+  }
+  
+  .form-toggle .switch input[type="checkbox"] {
+    display: none;
+  }
+  
+  .form-toggle .switch input[type="checkbox"]:active + .slider::after {
+    width: var(--toggle-wider);
+  }
+  
+  .form-toggle .switch input[type="checkbox"]:checked:active + .slider::after {
+    transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
+  }
+  
