--- a/src/styles/CreateButton.css
+++ b/src/styles/CreateButton.css
@@ -14,6 +14,7 @@
     cursor: pointer;
     transition: all 0.3s ease;
     margin-bottom: 50px;
+    position: relative;
 }
   
   .create-button:hover {
