--- a/src/styles/CreatePoolForm.css
+++ b/src/styles/CreatePoolForm.css
@@ -59,6 +59,7 @@
     border: 2px solid var(--black);
     border-radius: 10px;
     font-size: 14px;
+    cursor: pointer;
   }
   
   .form-price {
@@ -130,5 +131,63 @@
   
   .form-toggle .switch input[type="checkbox"]:checked:active + .slider::after {
     transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
+  }
+  
+  .radio-input input {
+    display: none;
+  }
+  
+  .radio-input {
+    --container_width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background-color: var(--white);
+    color: var(--black);
+    width: var(--container_width);
+    overflow: hidden;
+    border: 2px solid var(--black);
+    margin-bottom: 10px;
+  }
+  
+  .radio-input label {
+    width: 50%; /* Each option takes 50% width */
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    font-weight: 500;
+    font-size: 14px;
+  }
+  
+  .selection {
+    display: none;
+    position: absolute;
+    height: 100%;
+    width: calc(var(--container_width) / 2); /* Adjusted for two options */
+    z-index: 0;
+    left: 0;
+    top: 0;
+    transition: .3s ease;
+  }
+  
+  .radio-input label:has(input:checked) {
+    color: var(--black);
+  }
+  
+  .radio-input label:has(input:checked) ~ .selection {
+    background-color: var(--yellow);
+    display: inline-block;
+  }
+  
+  .radio-input label:nth-child(1):has(input:checked) ~ .selection {
+    transform: translateX(0); /* For the first option */
+  }
+  
+  .radio-input label:nth-child(2):has(input:checked) ~ .selection {
+    transform: translateX(var(--container_width)); /* For the second option */
   }
   
