--- a/src/styles/JoinPage.css
+++ b/src/styles/JoinPage.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
     overflow-x: hidden;
-    background: url('../resources/background.png') no-repeat center center fixed;
+    background: url('../resources/background1.jpg') no-repeat center center fixed;
     background-size: cover;
 }
