--- a/src/styles/CardGrid.css
+++ b/src/styles/CardGrid.css
@@ -25,7 +25,7 @@
   
   
   .card-name {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
     color: var(--black);
     margin-bottom: 20px;
@@ -113,6 +113,9 @@
     justify-content: space-between; /* Space the buttons evenly */
     margin-top: 30px; /* Adjust as needed */
     height: 75px;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .file-button {
@@ -128,7 +131,7 @@
     padding: 0 10px;
     cursor: pointer;
     transition: all 0.3s ease;
-    margin-right: 30px; /* Space between the buttons */
+    margin-right: 100px; /* Space between the buttons */
   }
 
   .file-button-uploaded {
